--- a/app/src/main/res/layout/activity_apropos.xml
+++ b/app/src/main/res/layout/activity_apropos.xml
@@ -46,6 +46,7 @@
      android:id="@+id/apropos_doc"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
+     app:layout_constraintDimensionRatio="1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/app_version" />
 
