--- a/app/src/main/res/layout/activity_config_round.xml
+++ b/app/src/main/res/layout/activity_config_round.xml
@@ -12,7 +12,7 @@
     android:id="@+id/table_layout1">
     <TableRow
         android:id="@+id/tableRow1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
         <Button
             android:id="@+id/bLetGo"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:layout_weight="2"
             android:contentDescription="@string/let_sgo"
             android:background="@drawable/am_buttonshape_grey"
@@ -44,7 +44,7 @@
             <EditText
                 android:id="@+id/IRoundName"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
+                android:layout_height="match_parent"
                 android:background="@drawable/it_style"
                 android:ems="10"
                 android:gravity="center"
@@ -77,8 +77,8 @@
         <Button
             android:id="@+id/bConcours"
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="4"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
             android:background="@drawable/am_buttonshape_grey"
             android:ems="10"
             android:gravity="center"
@@ -93,7 +93,7 @@
 
     <TableRow
         android:id="@+id/tableRow12"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         app:layout_constraintLeft_toLeftOf="@id/tableRow1"
@@ -105,7 +105,7 @@
         <EditText
             android:id="@+id/INumberArrow"
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/it_style"
             android:ems="10"
@@ -118,7 +118,7 @@
         <EditText
             android:id="@+id/INumberEndByRound"
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/it_style"
             android:ems="10"
@@ -132,7 +132,7 @@
         <EditText
             android:id="@+id/newArcher"
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="@drawable/it_style"
             android:hint="@string/name_archer"
@@ -146,8 +146,8 @@
         <Button
             android:id="@+id/bAddArcher"
             android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:layout_weight="2"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/am_buttonshape_grey"
             android:contentDescription="@string/addArcher"
             android:text="@string/addArcher"
@@ -162,7 +162,8 @@
         android:id="@+id/tableRow2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="10"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/tableRow3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -193,7 +194,7 @@
         android:id="@+id/tableRow3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="6"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/tableRow4"
 
@@ -219,21 +220,25 @@
             android:id="@+id/archersUp"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:background="@drawable/ic_fleche_up"
             app:layout_constraintDimensionRatio="1.5" />
         <Button
             android:id="@+id/archersDown"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:background="@drawable/ic_fleche_down"
             app:layout_constraintDimensionRatio="1" />
 
         </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:orientation="vertical">>
         <ListView
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
             	android:layout_height="match_parent"
             	android:layout_weight="3"
             	android:orientation="vertical"
@@ -242,6 +247,7 @@
                 android:background="@drawable/am_buttonshape_grey"
                 android:contentDescription="@string/ArcherToRound">
         </ListView>
+    </LinearLayout>
     </TableRow>
 
 <TableRow
