--- a/app/src/main/res/layout/activity_maintenance.xml
+++ b/app/src/main/res/layout/activity_maintenance.xml
@@ -25,8 +25,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_weight="1"
-        android:gravity="bottom"
-        app:layout_constraintBottom_toTopOf="@id/table1"
+        android:gravity="center"
+
         app:layout_constraintStart_toStartOf="@id/am_bCleaDataBase"
         app:layout_constraintTop_toBottomOf="@id/am_bCleaDataBase"
         app:layout_constraintVertical_bias="0.0">
@@ -34,13 +34,15 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginTop="2dp">
 
             <Button
                 android:id="@+id/am_bSuppresArcher"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:layout_marginStart="20dp"
                 android:background="@drawable/am_buttonshape_sup_archer"
                 app:layout_constraintDimensionRatio="1"
@@ -50,27 +52,30 @@
 
             <Spinner
                 android:id="@+id/am_sArcher"
-                android:layout_width="wrap_content"
-                android:layout_height="47dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="5dp"
                 android:background="@drawable/it_style"
                 app:layout_constraintStart_toEndOf="@id/am_bSuppresArcher"
-                app:layout_constraintTop_toTopOf="@+id/am_bSuppresArcher" />
+                app:layout_constraintTop_toTopOf="@id/am_bSuppresArcher" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginTop="2dp">
 
             <Button
                 android:id="@+id/am_bSup_round"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_sup_round"
-                app:layout_constraintDimensionRatio="1"
+                app:layout_constraintDimensionRatio="1.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="parent"
                 tools:text="@string/round" />
@@ -78,38 +83,30 @@
             <Spinner
                 android:id="@+id/sRound"
                 android:layout_width="wrap_content"
-                android:layout_height="47dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="5dp"
                 android:background="@drawable/it_style"
                 app:layout_constraintStart_toEndOf="@id/am_bSup_round"
                 app:layout_constraintTop_toTopOf="@id/am_bSup_round" />
         </TableRow>
-    </TableLayout>
 
-
-    <TableLayout
-        android:id="@+id/table1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:gravity="center"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/table">
 
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_marginTop="2dp">
 
 
             <TextView
                 android:id="@+id/TextOffset"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
+                android:layout_weight="2"
                 android:layout_marginStart="20dp"
-
+                android:gravity="center"
                 android:text="@string/pointageOffsetDesc"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -117,29 +114,31 @@
 
             <EditText
                 android:id="@+id/pointageOffset"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
-
+                android:layout_weight="1"
+                android:layout_marginRight="4dp"
+                android:gravity="center"
                 android:autofillHints="2"
                 android:background="@drawable/it_style"
                 android:ems="1"
-                android:gravity="center"
-                android:hint="@string/pointageOffsetDesc"
+                android:hint="2"
                 android:inputType="number"
                 android:singleLine="true"
-                android:text="@string/pointageOffsetDesc"
+                android:text="2"
 
-                android:textAlignment="center"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/TextOffset" />
+                app:layout_constraintLeft_toRightOf="@id/TextOffset"
+                app:layout_constraintRight_toRightOf="parent"/>
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_marginTop="2dp">
 
             <Button
                 android:id="@+id/am_bexport_archer_rounds"
@@ -158,7 +157,8 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_marginTop="10dp">
 
             <Button
                 android:id="@+id/am_bexport_round_archers"
@@ -177,7 +177,8 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_marginTop="10dp">
 
             <Button
                 android:id="@+id/am_bexport_round_archer"
@@ -196,7 +197,9 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="parent">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
