--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -17,7 +17,7 @@
 
     <EditText
         android:id="@+id/saisie"
-        android:layout_width="match_parent"
+        android:layout_width="366dp"
         android:layout_height="wrap_content"
         android:layout_weight="6"
         android:labelFor="@id/saisie"
