--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -60,7 +60,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:background="@drawable/ic_cible"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -72,7 +72,7 @@
         app:layout_scrollFlags="scroll|enterAlways" />
 
     <TableLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:id="@+id/TableLayout1"
         android:layout_marginStart="4dp"
