--- a/app/src/main/res/layout/activity_archer.xml
+++ b/app/src/main/res/layout/activity_archer.xml
@@ -6,28 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".Activity_archer">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/layout1"
+        app:layout_constraintTop_toTopOf="parent">
     <Spinner
         android:id="@+id/sp_archer"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
         android:focusable="true"
         android:background="@drawable/it_style"
+        android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/id_archer_bow"
+        app:layout_constraintLeft_toRightOf="parent"/>
+    <Spinner
+        android:id="@+id/id_archer_bow"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:ems="10"
+        android:background="@drawable/it_style"
+        android:spinnerMode="dropdown"
+        android:entries="@array/bow"
+        android:text="@string/archer_bow"
+        android:textSize="28sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/sp_archer"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+    </LinearLayout>
     <EditText
         android:id="@+id/archer_information"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="4"
-        android:ems="8"
-        android:textSize="14sp"
-        android:inputType="textMultiLine|text"
         android:background="#EADCB1"
+        android:ems="8"
+        android:inputType="textMultiLine|text"
         android:text="Information"
-        app:layout_constraintStart_toEndOf="@id/sp_archer"
-        app:layout_constraintTop_toBottomOf="@id/sp_archer" />
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@id/layout1"
+        app:layout_constraintTop_toBottomOf="@id/layout1" />
 
     <TableLayout
         android:id="@+id/tableLayout"
